--- a/JsonSchemaValidator/Views/Shared/_Layout.cshtml
+++ b/JsonSchemaValidator/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container-fluid">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
